# repo-health-auditor

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: application-statement.md
examples/: sample_audit_report.md
examples/sample_project/: app.py
src/repo_agents/: __init__.py  agents.py  cli.py  models.py  orchestrator.py  reporting.py
tests/: test_agents.py
