[project]
name = "agentic-repo-auditor"
version = "0.1.0"
description = "A lightweight multi-agent CLI that audits code repositories and produces actionable engineering reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Agentic Repo Auditor" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
repo-auditor = "repo_agents.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
