[project]
name = "agentic-repo-auditor"
version = "0.1.0"
description = "一个轻量的代码库健康巡检 CLI，可生成可执行的工程改进报告。"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "xinbaojiadao" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
repo-auditor = "repo_agents.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
